--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "aws-sdk": "^2.552.0",
     "serverless-bundle": "^1.2.5",
     "serverless-dotenv-plugin": "^2.1.1",
-    "serverless-offline": "^5.3.3"
+    "serverless-offline": "^5.12.0"
   },
   "dependencies": {
+    "stripe": "^7.10.0",
     "uuid": "^3.3.3"
   }
 }
